--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve": " json-server --watch indice-certo.json",
-    "database": "json-server --watch atividades-mensais.json --port 3004"
+    "database": "json-server --watch atividades-mensais.json --port 3004",
+    "database2": "json-server --watch abertura-fechamento.json --port 3001"
   },
   "private": true,
   "dependencies": {
